--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <img src="./jackson/IMG_20250403_174703.jpg" alt="Infraestrutura de baixa tensão" class="w-full h-56 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-3 text-gray-800">Energia Solar </h3>
-                        <p class="text-gray-600">nstalação de sistemas fotovoltaicos para geração de energia limpa e redução de custos..</p>
+                        <p class="text-gray-600">Instalação de sistemas fotovoltaicos para geração de energia limpa e redução de custos..</p>
                     </div>
                 </div>
             </div>
